Unecessary Jar Detector